--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,8 +10,8 @@
 
 h1{
     text-align: center;
-    background-color: #5c8297;
-    padding: 30px 0px;
+    background-color: rosybrown;
+    padding: 10px 0px;
     margin-top: 0px;
     color: wheat;
 }
@@ -25,22 +25,22 @@ h1{
 .addText{
     width: 75%;
     height: 20px;
-    padding: 5px;
-    font-size: 20px;
+    padding: 2px;
+    font-size: 15px;
 }
 
 .addItem button{
     position: relative;
     float: right;
     margin-right: 10px;
-    height: 30px;
+    height: 25px;
     width: 50px;
-    padding: 5px;
+    padding: 2px;
 }
 
 ul{
     list-style: none;
-    font-size: 20px;
+    font-size: 15px;
     color: green;
     margin-left: -40px;
     margin-bottom: 0px;
@@ -50,7 +50,7 @@ li{
     border-bottom: 1px solid #bbffbb;
     background-color: lightcoral;
     padding: 10px 0px;
-    margin-bottom: 5px; 
+    margin-bottom: 2px; 
 }
 
 .removeItem button{
@@ -58,71 +58,14 @@ li{
     position: relative;
     float: right;
     margin-right: 10px;
-    height: 30px;
+    height: 25px;
     width: 50px;
-    padding: 5px;
+    padding: 2px;
  }
+ input[type=checkbox] {
+  position: relative;
+  float:left;
+  bottom: 1px;
+}
 
-.switch {
-    position: relative;
-    margin-right: 10px;
-    float: right;
-    width: 45px;
-    height: 24px;
-  }
-  
-  .switch input {display:none;}
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 18px;
-    width: 16px;
-    left: 4px;
-    bottom: 4px;
-    background-color: burlywood;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px brown;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  } 
-
-  .check{
-    position: relative;
-    margin-right: 10px;
-    float: right;
-  }
 
