--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,11 @@
       <span class="removeItem">
       <button (click)= "removeItem(ind)">Delete</button></span>
          
-         <label><input #big type="checkbox"name="size" (change)="0">
-           <p *ngIf="big.checked">Completed</p></label>
-         
+         <label ><input #big type="checkbox"name="size" (change)="0">
+           <p *ngIf="big.checked">You have finished the work</p></label>
+          
               </li>
-              </ul>
-              </div>
+                </ul>
+                  </div>
   
 
